style.css
/* --------------------------------------- Plotly.js Styling --------------------------------------- */
#parCoordsContain {
  
  font-family: Lato;
  position: relative;
  display: flex;
  margin: 0 auto;
}

#bottom {
    position: absolute;
    top: 520px;
    display: flex;
}
.js-plotly-plot .plotly,
.js-plotly-plot .plotly div {
  font-family: Lato !important;
}

.axis-title {
  font-size: 14px !important;
  font-family: Lato !important;
}

.gtitle {
  font-family: Lato !important;
  font-size: 20px !important;
  font-weight: bolder !important;
  padding: 25%;
}

#legSelectContain {
  font-family: Lato !important;
  width: 150px;
  height: 600px;
  position: relative;
  
  /* Change position of the legend here! */
  top: 16px;
  right: 120px;

}


#legend3 {
  z-index: 1;
}
.textselected {
  font-size: 13px !important;
}
text {
  font-size: 13.5px !important;
  font-family: Lato !important;
  font-weight: bolder !important;
}
#select {
  font-family: Lato !important;
  font-size: 14px;
  z-index: 2;
  top: 0px;
  left: 0px;
}

.svg-container {
  margin:0;
}


/* --------------------------------------- Site Styling --------------------------------------- */

body {
  box-sizing: border-box;
  margin: 40px, 30px, 0, 30px;
  padding: 50px 0;
}

h1, h2 {

  color: #464545;

  text-align: center;
  font-family: "Lato", sans-serif;

  margin-top: 0;
  margin-bottom: 0;


}

h1 {
  font-size: 3em;
}

h2 {
  font-size: 1.5em;
}

p, select, option{
  font-family: "Open Sans", sans-serif;
}


.container {
  
  /* Sizing */
  height: 20%;
  width: 85%;
  
  /* Positioning */
  position: relative;
  display: flex;
  flex-wrap: wrap;

  /* Margins */
  margin: 0 auto;
}

.contentBox-1-3 {
  display: inline-block;
  position: relative;

  width: 33%;
  height: 100%;
}

.contentBox-2-3 {
  display: inline-block;
  position: relative;

  width: 66%;
  height: 100%;
}

.contentBox-even {

  display: inline-block;
  position: relative;

  width: 50%;
  height: 100%;
}

#variableSelect {
  display: block;
  position: relative;

  width: 400px;
  height: 40px;

  margin: 0 auto;
  margin-left: 39%;
}

select {
  background-color: #fff;
  box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.3);
  border-color: white;
  transition: all 375ms ease-in-out;
}

